<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white"
    android:backgroundTint="@color/teal_700"
    tools:context=".MainActivity">

  <ImageView
      android:id="@+id/icon1"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:src="@drawable/ic_twotone_phone_android_24"
      android:layout_gravity="center_horizontal"
      android:layout_margin="20dp"
      android:contentDescription="@string/todo" />

    <!--1) For Phone NUmber Input-->
    <LinearLayout
        android:id="@+id/phoneLo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone_number"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <TextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_phone_number"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/_91xxxxxxxxxx"
            android:inputType="phone"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/getotp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/get_otp"/>

    </LinearLayout>

    <!--2) For OTP/Verification Code input-->

    <LinearLayout
        android:id="@+id/OTPLo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/verification_otp"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/OTPSentDescription"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_the_verification_code_we_sent_to_your_mobile"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/OTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/_123456"
            android:inputType="number"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/resendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/didn_t_get_otp_resend"/>

        <Button
            android:id="@+id/Submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/submit"/>

    </LinearLayout>


</LinearLayout>
